tests/compile_fail/store_init_omitted_and_default_not_implemented.stderr
error[E0277]: the trait bound `Store<usize, usize>: Default` is not satisfied
  --> tests/compile_fail/store_init_omitted_and_default_not_implemented.rs:14:1
   |
14 | #[memoized(key_expr = input, store_type = Store)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Store<usize, usize>`
   |
   = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
